[gd_scene load_steps=9 format=3 uid="uid://cwbofkkm0rpoo"]

[ext_resource type="Script" path="res://scripts/carriles.gd" id="1_6jwjv"]
[ext_resource type="Texture2D" uid="uid://dt3fcwww1op1n" path="res://sprites/fondos/fondocalle.png" id="2_8nyug"]
[ext_resource type="PackedScene" uid="uid://m8r2bbb17tso" path="res://scenes/objetos/camisa.tscn" id="2_msb5k"]
[ext_resource type="PackedScene" uid="uid://epwm4lks5efu" path="res://scenes/objetos/pantalones.tscn" id="3_oav5t"]
[ext_resource type="PackedScene" uid="uid://chhx10o83m1v0" path="res://scenes/objetos/reloj.tscn" id="4_svfax"]
[ext_resource type="PackedScene" uid="uid://cx423nn0jbet5" path="res://scenes/objetos/zapatos.tscn" id="5_ut7an"]
[ext_resource type="Texture2D" uid="uid://cbqse17brb3jy" path="res://sprites/personaje/road_characters.png" id="7_6o68s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_02l2u"]
size = Vector2(59, 58)

[node name="minijuego" type="Node2D"]
script = ExtResource("1_6jwjv")
items_to_spawn = Array[PackedScene]([ExtResource("2_msb5k"), ExtResource("3_oav5t"), ExtResource("4_svfax"), ExtResource("5_ut7an")])

[node name="fondo" type="Sprite2D" parent="."]
texture = ExtResource("2_8nyug")
centered = false

[node name="first_street" type="Node2D" parent="fondo"]
position = Vector2(250, 350)

[node name="second_street" type="Node2D" parent="fondo"]
position = Vector2(250, 515)

[node name="personaje" type="Node2D" parent="."]
position = Vector2(48, 288)
scale = Vector2(2, 2)

[node name="body" type="Sprite2D" parent="personaje"]
scale = Vector2(1.2, 1.2)
texture = ExtResource("7_6o68s")
centered = false
offset = Vector2(-7, -5)
hframes = 2

[node name="Area2D" type="Area2D" parent="personaje"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="personaje/Area2D"]
position = Vector2(34, 30.5)
shape = SubResource("RectangleShape2D_02l2u")

[node name="spawn_positions" type="Node2D" parent="."]

[node name="first_street" type="Node2D" parent="spawn_positions"]
position = Vector2(1300, 350)

[node name="second_street" type="Node2D" parent="spawn_positions"]
position = Vector2(1300, 515)

[node name="spawn_timer" type="Timer" parent="."]

[node name="score_timer" type="Timer" parent="."]

[connection signal="timeout" from="spawn_timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="score_timer" to="." method="_on_score_timer_timeout"]
